syntax = "proto3";

option go_package = ".;pb";

service SendChat {
  rpc SendChat (ChatRequest) returns (ChatResponse) {}
}
message ChatRequest {
    string message = 1;
}
message ChatResponse {
    string response = 1;
}